Optimize text, state, and file management

--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -104,17 +104,19 @@
     <ClCompile Include="Source\Audio\AudioManager.cpp" />
     <ClCompile Include="Source\Audio\AudioSource.cpp" />
     <ClCompile Include="Source\Core\EntityManager.cpp" />
-    <ClCompile Include="Source\Core\State.cpp" />
+    <ClCompile Include="Source\Core\FileManager.cpp" />
+    <ClCompile Include="Source\State\State.cpp" />
     <ClCompile Include="Source\Events\Event.cpp" />
     <ClCompile Include="Source\Events\EventManager.cpp" />
     <ClCompile Include="Source\Graphics\Base\Font.cpp" />
     <ClCompile Include="Source\Graphics\FontManager.cpp" />
     <ClCompile Include="Source\Graphics\TextGFX.cpp" />
     <ClCompile Include="Source\Input\Input.cpp" />
+    <ClCompile Include="Source\State\StateManager.cpp" />
     <ClCompile Include="Source\UI\Layout.cpp" />
     <ClCompile Include="Source\UI\Rectangle.cpp" />
     <ClCompile Include="Source\UI\Sprite.cpp" />
-    <ClCompile Include="Source\UI\Text.cpp" />
+    <ClCompile Include="Source\UI\TextBox.cpp" />
     <ClCompile Include="Source\UI\UIEntity.cpp" />
     <ClCompile Include="Source\Utils\Pair.cpp" />
     <ClCompile Include="Source\Utils\Serializer.cpp" />
@@ -145,7 +147,8 @@
     <ClInclude Include="Source\Audio\AudioSource.h" />
     <ClInclude Include="Source\Core\App.h" />
     <ClInclude Include="Source\Core\EntityManager.h" />
-    <ClInclude Include="Source\Core\State.h" />
+    <ClInclude Include="Source\Core\FileManager.h" />
+    <ClInclude Include="Source\State\State.h" />
     <ClInclude Include="Source\Events\Event.h" />
     <ClInclude Include="Source\Events\EventManager.h" />
     <ClInclude Include="Source\Graphics\Drawable.h" />
@@ -166,10 +169,11 @@
     <ClInclude Include="Source\Graphics\Base\VertexArray.h" />
     <ClInclude Include="Source\Graphics\Base\VertexBuffer.h" />
     <ClInclude Include="Source\Graphics\Base\VertexLayout.h" />
+    <ClInclude Include="Source\State\StateManager.h" />
     <ClInclude Include="Source\UI\Layout.h" />
     <ClInclude Include="Source\UI\Rectangle.h" />
     <ClInclude Include="Source\UI\Sprite.h" />
-    <ClInclude Include="Source\UI\Text.h" />
+    <ClInclude Include="Source\UI\TextBox.h" />
     <ClInclude Include="Source\UI\UIEntity.h" />
     <ClInclude Include="Source\Utils\Pair.h" />
     <ClInclude Include="Source\Utils\Serializer.h" />
