Create a simple logger

--- a/Wand/Wand.vcxproj
+++ b/Wand/Wand.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Source\UI\Sprite.cpp" />
     <ClCompile Include="Source\UI\TextBox.cpp" />
     <ClCompile Include="Source\UI\UIEntity.cpp" />
+    <ClCompile Include="Source\Utils\Logger.cpp" />
     <ClCompile Include="Source\Utils\Pair.cpp" />
     <ClCompile Include="Source\Utils\Random.cpp" />
     <ClCompile Include="Source\Utils\Serializer.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="Source\UI\Sprite.h" />
     <ClInclude Include="Source\UI\TextBox.h" />
     <ClInclude Include="Source\UI\UIEntity.h" />
+    <ClInclude Include="Source\Utils\Logger.h" />
     <ClInclude Include="Source\Utils\Pair.h" />
     <ClInclude Include="Source\Utils\Random.h" />
     <ClInclude Include="Source\Utils\Serializer.h" />
